# tg_eware

./: Dockerfile  LICENSE  pyproject.toml
app/: config.py  conv_artikuls_uraala.csv  main.py  web_client.py
app/bot/: __init__.py  custom_logger.py  navigation.py  static_menu.py
app/data/: ozon_methods.py  statistics.py
app/ozon_api/: __init__.py
app/ozon_api/schemas/: order.py  posting.py  stock_balance.py  warehouse.py
